fix scrolling pagination